--- a/Hand In/lit.bib
+++ b/Hand In/lit.bib
@@ -1,3 +1,13 @@
+@ONLINE{Champandard_2007_FearAi,
+author = {Alex J. Champandard},
+title = {{Assaulting F.E.A.R.s AI: 29 Tricks to Arm Your Game}},
+howpublished = {\url{http://aigamedev.com/open/review/fear-ai/}},
+year = {2007},
+month = {October}
+}
+
+*********
+
 @article{Sacks_1974_TurnTakingConversations,
 author = {Harvey Sacks and Emanuel A. Schegloff and Gail Jefferson},
 title = {{A Simplest Systematics for the Organization of Turn-Taking for Conversation}},
