--- a/trunk/Hand In/MAIFG_Hand_In.lyx
+++ b/trunk/Hand In/MAIFG_Hand_In.lyx
@@ -444,6 +444,19 @@ postconditions:
 \end_layout
 
 \end_deeper
+\begin_layout Section
+Evaluation
+\end_layout
+
+\begin_layout Standard
+Interaction with the bot is enjoyable for a short time.
+ He can do some fun things, for example he gets the shock gun nuke right
+ at times, or dodges enemy fire interestingly when retreating.
+ At the same time the bot is not challenging enough to create a really fun
+ engagement.
+ 
+\end_layout
+
 \begin_layout Subsubsection*
 \begin_inset Note Note
 status collapsed
