--- a/trunk/Hand In/lit.bib
+++ b/trunk/Hand In/lit.bib
@@ -6,6 +6,15 @@ year = {2007},
 month = {October}
 }
 
+@techreport{Welch:1995:IKF:897831,
+ author = {Welch, Greg and Bishop, Gary},
+ title = {{An Introduction to the Kalman Filter}},
+ year = {1995},
+ source = {http://www.ncstrl.org:8900/ncstrl/servlet/search?formname=detail\&id=oai%3Ancstrlh%3Auncch_cs%3AUNCCH_CS%2F%2FTR95-041},
+ publisher = {University of North Carolina at Chapel Hill},
+ address = {Chapel Hill, NC, USA},
+} 
+
 *********
 
 @article{Sacks_1974_TurnTakingConversations,
